--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-electron": "electron .",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron": "electron ."
   },
-  "main": "public/app.js",
+  "main": "src/electron/app.js",
   "eslintConfig": {
     "extends": [
       "react-app",
