--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
-    "electron": "^26.0.0",
+    "chart.js": "^4.4.0",
+    "electron-builder": "^24.6.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-scripts": "5.0.1",
@@ -30,7 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron": "electron ."
+    "electron:build": "npm run build && tsc -p electron && electron-builder"
   },
   "main": "src/electron/app.js",
   "eslintConfig": {
