--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
+    "electron-is-dev": "^2.0.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -36,9 +36,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron:build:mac": "npm run build && electron-builder -m -c.extraMetadata.main=build/electron.js"
+    "electron:build:mac": "npm run build && electron-builder -m -c.extraMetadata.main=build/electron.js",
+    "electron:build:linux": "npm run build && electron-builder -m -c.extraMetadata.main=build/electron.js",
+    "electron:build:win": "npm run build && electron-builder -m -c.extraMetadata.main=build/electron.js"
   },
-  "main": "./public/electron.js",
+  "main": "./electron/app.js",
   "build": {
     "appId": "com.electron.myapp",
     "productName": "My Electron App",
